

service StockTradingService{
  rpc getStockPrice(StockRequest) returns (StockResponse);
}

message StockRequest{}

message StockResponse{}